tinyc/test/good/ptr-arg-zero.c
void foo( int *p ) {}

int main()
{
    foo( 0 );
    return 0;
}
