tinyc/test/bad/void-as-bool-while.c
void v() {}

int main()
{
    while ( v() )
        break;
    return 0;
}
